<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/type1_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="37dp"
        android:text="@string/chosen_type1_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/type2_text"
        app:layout_constraintEnd_toStartOf="@+id/type1_dropdown"
        app:layout_constraintHorizontal_bias="0.647"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_text"
        app:layout_constraintVertical_bias="0.41" />

    <Spinner
        android:id="@+id/type1_dropdown"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:entries="@array/type_array1"
        android:minHeight="48dp"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/randomize_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.758"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_text"
        app:layout_constraintVertical_bias="0.008" />

    <TextView
        android:id="@+id/type2_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="93dp"
        android:text="@string/chosen_type2_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/randomize_button"
        app:layout_constraintEnd_toStartOf="@+id/type2_dropdown"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_text"
        app:layout_constraintVertical_bias="0.22" />

    <Spinner
        android:id="@+id/type2_dropdown"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:entries="@array/type_array2"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/randomize_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.758"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type1_dropdown"
        app:layout_constraintVertical_bias="0.195" />

    <TextView
        android:id="@+id/title_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />

    <TextView
        android:id="@+id/info_text"
        android:layout_width="349dp"
        android:layout_height="55dp"
        android:text="@string/chosen_types_text"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_main"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/randomize_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/randomize_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_text"
        app:layout_constraintVertical_bias="0.592" />

    <TextView
        android:id="@+id/pokedex_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chosen_pokedex_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/randomize_button"
        app:layout_constraintEnd_toStartOf="@+id/pokedex_dropdown"
        app:layout_constraintHorizontal_bias="0.663"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type2_text"
        app:layout_constraintVertical_bias="0.523" />

    <Spinner
        android:id="@+id/pokedex_dropdown"
        android:layout_width="147dp"
        android:layout_height="48dp"
        android:entries="@array/pokedex_array"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/randomize_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.761"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type2_dropdown"
        app:layout_constraintVertical_bias="0.439" />

</androidx.constraintlayout.widget.ConstraintLayout>